Add: new town council "indifferent" attitude
Closes: #184

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -106,6 +106,13 @@ static const SettingDescEnumEntry _linkgraph_mode_per_cargo[] = {
 { DT_ASYMMETRIC_NEAR, STR_CONFIG_SETTING_DISTRIBUTION_ASYMMETRIC_NEAREST },
 { 0, STR_NULL }
 };
+static const SettingDescEnumEntry _town_council_approval[] = {
+{ 255, STR_CITY_APPROVAL_INDIFFERENT },
+{ 0, STR_CITY_APPROVAL_PERMISSIVE },
+{ 1, STR_CITY_APPROVAL_TOLERANT },
+{ 2, STR_CITY_APPROVAL_HOSTILE },
+{ 0, STR_NULL }
+};
 
 static const SettingDescEnumEntry _train_braking_model[] = {
 { TBM_ORIGINAL, STR_CONFIG_SETTING_ORIGINAL },
@@ -375,19 +382,15 @@ str      = STR_CONFIG_SETTING_DISASTERS
 strhelp  = STR_CONFIG_SETTING_DISASTERS_HELPTEXT
 cat      = SC_BASIC
 
-[SDT_VAR]
+[SDT_ENUM]
 base     = GameSettings
 var      = difficulty.town_council_tolerance
 type     = SLE_UINT8
 from     = SLV_97
-guiflags = SGF_MULTISTRING
 def      = 0
-min      = 0
-max      = 2
-interval = 1
+enumlist = _town_council_approval
 str      = STR_CONFIG_SETTING_CITY_APPROVAL
 strhelp  = STR_CONFIG_SETTING_CITY_APPROVAL_HELPTEXT
-strval   = STR_CITY_APPROVAL_PERMISSIVE
 proc     = DifficultyNoiseChange
 
 [SDT_BOOL]
