Add feature: realistic train braking
Add setting to select train braking model.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -18,6 +18,7 @@ static bool InvalidateTownViewWindow(int32 p1);
 static bool DeleteSelectStationWindow(int32 p1);
 static bool UpdateConsists(int32 p1);
 static bool TrainAccelerationModelChanged(int32 p1);
+static bool TrainBrakingModelChanged(int32 p1);
 static bool RoadVehAccelerationModelChanged(int32 p1);
 static bool TrainSlopeSteepnessChanged(int32 p1);
 static bool RoadVehSlopeSteepnessChanged(int32 p1);
@@ -105,6 +106,12 @@ static const SettingDescEnumEntry _linkgraph_mode_per_cargo[] = {
 { DT_ASYMMETRIC, STR_CONFIG_SETTING_DISTRIBUTION_ASYMMETRIC },
 { DT_ASYMMETRIC_EQ, STR_CONFIG_SETTING_DISTRIBUTION_ASYMMETRIC_EQ },
 { DT_ASYMMETRIC_NEAR, STR_CONFIG_SETTING_DISTRIBUTION_ASYMMETRIC_NEAREST },
+{ 0, STR_NULL }
+};
+
+static const SettingDescEnumEntry _train_braking_model[] = {
+{ TBM_ORIGINAL, STR_CONFIG_SETTING_ORIGINAL },
+{ TBM_REALISTIC, STR_CONFIG_SETTING_TRAIN_BRAKING_REALISTIC },
 { 0, STR_NULL }
 };
 
@@ -1217,6 +1224,18 @@ str      = STR_CONFIG_SETTING_TRAIN_ACCELERATION_MODEL
 strhelp  = STR_CONFIG_SETTING_TRAIN_ACCELERATION_MODEL_HELPTEXT
 strval   = STR_CONFIG_SETTING_ORIGINAL
 proc     = TrainAccelerationModelChanged
+
+[SDT_ENUM]
+base     = GameSettings
+var      = vehicle.train_braking_model
+type     = SLE_UINT8
+def      = TBM_ORIGINAL
+enumlist = _train_braking_model
+str      = STR_CONFIG_SETTING_TRAIN_BRAKING_MODEL
+strhelp  = STR_CONFIG_SETTING_TRAIN_BRAKING_MODEL_HELPTEXT
+proc     = TrainBrakingModelChanged
+cat      = SC_EXPERT
+patxname = ""realistic_braking.vehicle.train_braking_model""
 
 [SDT_VAR]
 base     = GameSettings
