--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5072,6 +5072,20 @@ strhelp  = STR_CONFIG_SETTING_DISABLE_VEHICLE_IMAGE_UPDATE_HELPTEXT
 proc     = InvalidateAllVehicleImageCaches
 cat      = SC_EXPERT
 
+[SDTC_VAR]
+var      = gui.vehicle_names
+type     = SLE_UINT8
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+guiflags = SGF_MULTISTRING
+def      = 1
+min      = 0
+max      = 2
+str      = STR_CONFIG_SETTING_VEHICLE_NAMES
+strhelp  = STR_CONFIG_SETTING_VEHICLE_NAMES_HELPTEXT
+strval   = STR_CONFIG_SETTING_VEHICLE_NAMES_TRADITIONAL
+proc     = RedrawScreen
+cat      = SC_BASIC
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
