Add setting for inflation dates mode

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2029,6 +2029,14 @@ str      = STR_CONFIG_SETTING_INFLATION
 strhelp  = STR_CONFIG_SETTING_INFLATION_HELPTEXT
 cat      = SC_BASIC
 
+[SDT_BOOL]
+base     = GameSettings
+var      = economy.inflation_fixed_dates
+def      = true
+str      = STR_CONFIG_SETTING_INFLATION_FIXED_DATES
+strhelp  = STR_CONFIG_SETTING_INFLATION_FIXED_DATES_HELPTEXT
+patxname = ""inflation_fixed_dates.economy.inflation_fixed_dates""
+
 [SDT_VAR]
 base     = GameSettings
 var      = economy.day_length_factor
