MacOS: Change bundle ID
See: #208

--- a/os/macosx/Info.plist.in
+++ b/os/macosx/Info.plist.in
@@ -14,7 +14,7 @@
         <key>CFBundleIconFile</key>
         <string>${CPACK_BUNDLE_NAME}.icns</string>
         <key>CFBundleIdentifier</key>
-        <string>org.openttd.openttd</string>
+        <string>org.openttd.openttd.jgrpp</string>
         <key>CFBundleInfoDictionaryVersion</key>
         <string>6.0</string>
         <key>CFBundleName</key>
