Add GUI setting for shading trees on slopes in viewports
Deafult on, only for non-map mode
(Slope shading is always on in map mode)

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5094,6 +5094,15 @@ strval   = STR_CONFIG_SETTING_VEHICLE_NAMES_TRADITIONAL
 proc     = RedrawScreen
 cat      = SC_BASIC
 
+[SDTC_BOOL]
+var      = gui.shade_trees_on_slopes
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = true
+str      = STR_CONFIG_SETTING_SHADED_TREES_ON_SLOPES
+strhelp  = STR_CONFIG_SETTING_SHADED_TREES_ON_SLOPES_HELPTEXT
+proc     = RedrawScreen
+cat      = SC_BASIC
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
