--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,9 +94,9 @@ jobs:
         cmake -DGENERATE_OTTDREV=1 -P cmake/scripts/FindVersion.cmake
         ./.github/changelog.sh > .changelog
         TZ='UTC' date +"%Y-%m-%d %H:%M UTC" > .release_date
-        cat .ottdrev | cut -f 1 -d$'\t' > .version
+        head -1 .ottdrev-vc  | cut -f 1 -d$'\t' > .version
 
-        if [ $(cat .ottdrev | cut -f 6 -d$'\t') = '1' ]; then
+        if [ $(head -1 .ottdrev-vc | cut -f 6 -d$'\t') = '1' ]; then
           # Assume that all tags are always releases. Why else make a tag?
           IS_TAG="true"
 
