--- a/src/table/CMakeLists.txt
+++ b/src/table/CMakeLists.txt
@@ -13,6 +13,7 @@ set(TABLE_INI_SOURCE_FILES
 
 if (HOST_BINARY_DIR)
     include(${HOST_BINARY_DIR}/settingsgen.cmake)
+    add_executable(hostsettingsgen ALIAS settingsgen)
 endif()
 
 # Generate a command and target to create the settings table
