--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -28,6 +28,7 @@ static bool VehListCargoFilterShownChanged(int32);
 static bool TownFoundingChanged(int32 p1);
 static bool DifficultyNoiseChange(int32 i);
 static bool DifficultyMoneyCheatMultiplayerChange(int32 i);
+static bool DifficultyRenameTownsMultiplayerChange(int32 i);
 static bool MaxNoAIsChange(int32 i);
 static bool CheckRoadSide(int p1);
 static bool ChangeMaxHeightLevel(int32 p1);
@@ -411,6 +412,16 @@ strhelp  = STR_CONFIG_SETTING_MONEY_CHEAT_MULTIPLAYER_HELPTEXT
 proc     = DifficultyMoneyCheatMultiplayerChange
 cat      = SC_EXPERT
 patxname = ""cheat.difficulty.money_cheat_in_multiplayer""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = difficulty.rename_towns_in_multiplayer
+def      = false
+str      = STR_CONFIG_SETTING_RENAME_TOWNS_MULTIPLAYER
+strhelp  = STR_CONFIG_SETTING_RENAME_TOWNS_MULTIPLAYER_HELPTEXT
+proc     = DifficultyRenameTownsMultiplayerChange
+cat      = SC_EXPERT
+patxname = ""cheat.difficulty.rename_towns_in_multiplayer""
 
 [SDTG_VAR]
 name     = ""diff_level""
