--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1489,6 +1489,21 @@ strval   = STR_CONFIG_SETTING_NO_EXPIRE_VEHICLES_AFTER_VALUE
 cat      = SC_EXPERT
 patxname = ""vehicle.no_expire_vehicles_after""
 
+[SDT_VAR]
+base     = GameSettings
+var      = vehicle.no_introduce_vehicles_after
+type     = SLE_INT32
+guiflags = SGF_NO_NETWORK | SGF_0ISDISABLED
+def      = 0
+min      = MIN_YEAR
+max      = MAX_YEAR
+interval = 1
+str      = STR_CONFIG_SETTING_NO_INTRODUCE_VEHICLES_AFTER
+strhelp  = STR_CONFIG_SETTING_NO_INTRODUCE_VEHICLES_AFTER_HELPTEXT
+strval   = STR_CONFIG_SETTING_NO_INTRODUCE_VEHICLES_AFTER_VALUE
+cat      = SC_EXPERT
+patxname = ""vehicle.no_introduce_vehicles_after""
+
 ;; vehicle.exact_intro_date
 [SDT_NULL]
 length   = 1
