This patch allows configuring the town zone size multipliers in towns_cmd.cpp with values defined in the settings menu. Strings are done for English. Play tested and appears safe, albeit the values do not behave perhaps as players might expect them to. Expert feature.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2400,6 +2400,66 @@ strval   = STR_CONFIG_SETTING_TOWN_GROWTH_EXTREME_SLOW
 orderproc = OrderTownGrowthRate
 
 [SDT_VAR]
+base = GameSettings
+var = economy.town_zone_0_mult
+type = SLE_UINT16
+def = 15
+min = 0
+max = 255
+interval = 1
+str = STR_CONFIG_SETTING_TOWN_ZONE_0_MULT
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_0_MULT_HELPTEXT
+strval = STR_JUST_COMMA
+
+[SDT_VAR]
+base = GameSettings
+var = economy.town_zone_1_mult
+type = SLE_UINT16
+def = 9
+min = 0
+max = 255
+interval = 1
+str = STR_CONFIG_SETTING_TOWN_ZONE_1_MULT
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_1_MULT_HELPTEXT
+strval = STR_JUST_COMMA
+
+[SDT_VAR]
+base = GameSettings
+var = economy.town_zone_2_mult
+type = SLE_UINT16
+def = 0
+min = 0
+max = 255
+interval = 1
+str = STR_CONFIG_SETTING_TOWN_ZONE_2_MULT
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_2_MULT_HELPTEXT
+strval = STR_JUST_COMMA
+
+[SDT_VAR]
+base = GameSettings
+var = economy.town_zone_3_mult
+type = SLE_UINT16
+def = 5
+min = 0
+max = 255
+interval = 1
+str = STR_CONFIG_SETTING_TOWN_ZONE_3_MULT
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_3_MULT_HELPTEXT
+strval = STR_JUST_COMMA
+
+[SDT_VAR]
+base = GameSettings
+var = economy.town_zone_4_mult
+type = SLE_UINT16
+def = 3
+min = 0
+max = 255
+interval = 1
+str = STR_CONFIG_SETTING_TOWN_ZONE_4_MULT
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_4_MULT_HELPTEXT
+strval = STR_JUST_COMMA
+
+[SDT_VAR]
 base     = GameSettings
 var      = economy.town_growth_cargo_transported
 type     = SLE_UINT8
