--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2217,6 +2217,20 @@ strhelp  = STR_CONFIG_SETTING_SNOWLINE_HEIGHT_HELPTEXT
 strval   = STR_JUST_COMMA
 cat      = SC_BASIC
 
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.rainforest_line_height
+type     = SLE_UINT8
+guiflags = SGF_NO_NETWORK
+def      = 8
+min      = 1
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_RAINFORESTLINE_HEIGHT
+strhelp  = STR_CONFIG_SETTING_RAINFORESTLINE_HEIGHT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_BASIC
+
 ;;game_creation.desert_amount
 [SDT_NULL]
 length   = 1
