Additional changes to functionality, now wrapped up behind a setting that controls whether to enable or disable the feature. If the feature is enabled then the multipliers apply based on their own calculations and the previous method of only changing behavior after 92houses constructed is not used.
Todo, once I learn how: Create different presets. Hide custom values unless the option 'Custom' is selected. Savegame stuff.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2384,6 +2384,14 @@ strhelp  = STR_CONFIG_SETTING_TOWN_GROWTH_HELPTEXT
 strval   = STR_CONFIG_SETTING_TOWN_GROWTH_EXTREME_SLOW
 orderproc = OrderTownGrowthRate
 
+[SDT_BOOL]
+base = GameSettings
+var = economy.town_zone_calc_mode
+type = SLE_UINT16
+def = false
+str = STR_CONFIG_SETTING_TOWN_ZONE_CALC_MODE
+strhelp = STR_CONFIG_SETTING_TOWN_ZONE_CALC_MODE_HELPTEXT
+
 [SDT_VAR]
 base = GameSettings
 var = economy.town_zone_0_mult
