Add rainforest line height setting to map generation windows
See: #227

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2222,9 +2222,9 @@ base     = GameSettings
 var      = game_creation.rainforest_line_height
 type     = SLE_UINT8
 guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
-def      = 8
-min      = 1
-max      = 255
+def      = DEF_RAINFOREST_HEIGHT
+min      = MIN_RAINFOREST_HEIGHT
+max      = MAX_RAINFOREST_HEIGHT
 interval = 1
 str      = STR_CONFIG_SETTING_RAINFORESTLINE_HEIGHT
 strhelp  = STR_CONFIG_SETTING_RAINFORESTLINE_HEIGHT_HELPTEXT
