initial settings to allow configuring rivers tropic zone generation. todo: oceans.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2232,6 +2232,21 @@ strval   = STR_JUST_COMMA
 cat      = SC_BASIC
 patxname = ""rainforest_line_height.game_creation.rainforest_line_height""
 
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.river_tropics_width
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 5
+min      = 1
+max      = 10
+interval = 1
+str      = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH
+strhelp  = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_BASIC
+patxname = ""rainforest_line_height.game_creation.rainforest_line_height""
+
 ;;game_creation.desert_amount
 [SDT_NULL]
 length   = 1
