Initial attempt at exposing more configration options for rivers.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3726,6 +3726,9 @@ def      = 16
 min      = 2
 max      = 255
 cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVER_MIN_LENGTH
+strhelp  = STR_CONFIG_SETTING_RIVER_MIN_LENGTH_HELPTEXT
+strval   = STR_RIVERS_NONE
 
 [SDT_VAR]
 base     = GameSettings
@@ -3736,6 +3739,9 @@ def      = 5
 min      = 1
 max      = 255
 cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM
+strhelp  = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM_HELPTEXT
+strval   = STR_RIVERS_NONE
 
 [SDT_VAR]
 base     = GameSettings
@@ -3745,7 +3751,7 @@ from     = SLV_163
 guiflags = SGF_MULTISTRING | SGF_NEWGAME_ONLY
 def      = 2
 min      = 0
-max      = 3
+max      = 5
 str      = STR_CONFIG_SETTING_RIVER_AMOUNT
 strhelp  = STR_CONFIG_SETTING_RIVER_AMOUNT_HELPTEXT
 strval   = STR_RIVERS_NONE
