Further tweak the feature, make sure everything is parameterised correctly, fix some coding mistakes that were generating build warnings.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3728,7 +3728,6 @@ max      = 255
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVER_MIN_LENGTH
 strhelp  = STR_CONFIG_SETTING_RIVER_MIN_LENGTH_HELPTEXT
-strval   = STR_RIVERS_NONE
 
 [SDT_VAR]
 base     = GameSettings
@@ -3741,7 +3740,22 @@ max      = 255
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM
 strhelp  = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM_HELPTEXT
-strval   = STR_RIVERS_NONE
+
+[SDT_BOOL]
+base     = GameSettings
+var      = game_creation.rivers_springs_higher_tiles
+def      = true
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES
+strhelp  = STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES_HELPTEXT
+
+[SDT_BOOL]
+base     = GameSettings
+var      = game_creation.rivers_top_of_hill
+def      = true
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL
+strhelp  = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL_HELPTEXT
 
 [SDT_VAR]
 base     = GameSettings
