Further tweaks. Fix the string values for the river min length and river randomness not showing correctly. Remove the setting for disabling the rule require rivers to have some higher tiles near their origins. On TGP generated maps it was causing an assertion to sometimes (often) fail.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3743,6 +3743,7 @@ max      = 255
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVER_MIN_LENGTH
 strhelp  = STR_CONFIG_SETTING_RIVER_MIN_LENGTH_HELPTEXT
+strval   = STR_JUST_COMMA
 
 [SDT_VAR]
 base     = GameSettings
@@ -3755,14 +3756,7 @@ max      = 255
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM
 strhelp  = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM_HELPTEXT
-
-[SDT_BOOL]
-base     = GameSettings
-var      = game_creation.rivers_springs_higher_tiles
-def      = true
-cat      = SC_EXPERT
-str      = STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES
-strhelp  = STR_CONFIG_SETTING_RIVERS_SPRINGS_HIGHER_TILES_HELPTEXT
+strval   = STR_JUST_COMMA
 
 [SDT_BOOL]
 base     = GameSettings
