--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3750,6 +3750,18 @@ str      = STR_CONFIG_SETTING_RIVER_AMOUNT
 strhelp  = STR_CONFIG_SETTING_RIVER_AMOUNT_HELPTEXT
 strval   = STR_RIVERS_NONE
 
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.amount_of_rocks
+type     = SLE_UINT8
+def      = 5
+min      = 1
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_ROCKS_AMOUNT
+strhelp  = STR_CONFIG_SETTING_ROCKS_AMOUNT_HELPTEXT
+strval   = STR_JUST_COMMA
+
 ;;game_creation.build_public_roads
 [SDT_NULL]
 length   = 1
