Hopefully fix the settings page not showing correct values

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3736,6 +3736,7 @@ cat      = SC_BASIC
 base     = GameSettings
 var      = game_creation.min_river_length
 type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 from     = SLV_163
 def      = 16
 min      = 2
@@ -3749,6 +3750,7 @@ strval   = STR_JUST_COMMA
 base     = GameSettings
 var      = game_creation.river_route_random
 type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 from     = SLV_163
 def      = 5
 min      = 1
@@ -3761,6 +3763,7 @@ strval   = STR_JUST_COMMA
 [SDT_BOOL]
 base     = GameSettings
 var      = game_creation.rivers_top_of_hill
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 def      = true
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL
