Hopefully fix the issues with the settings menu not showing up correctly.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3754,6 +3754,7 @@ strval   = STR_RIVERS_NONE
 base     = GameSettings
 var      = game_creation.amount_of_rocks
 type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 def      = 5
 min      = 1
 max      = 255
