Some tweaks for Lakes; allow their size to be customised, allow lakes to be generated in deserts if the correct setting is enabled

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2232,21 +2232,6 @@ strval   = STR_JUST_COMMA
 cat      = SC_BASIC
 patxname = ""rainforest_line_height.game_creation.rainforest_line_height""
 
-[SDT_VAR]
-base     = GameSettings
-var      = game_creation.river_tropics_width
-type     = SLE_UINT8
-guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
-def      = 5
-min      = 1
-max      = 12
-interval = 1
-str      = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH
-strhelp  = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH_HELPTEXT
-strval   = STR_JUST_COMMA
-cat      = SC_BASIC
-patxname = ""rainforest_line_height.game_creation.rainforest_line_height""
-
 ;;game_creation.desert_amount
 [SDT_NULL]
 length   = 1
@@ -3768,6 +3753,43 @@ def      = true
 cat      = SC_EXPERT
 str      = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL
 strhelp  = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL_HELPTEXT
+
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.river_tropics_width
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 5
+min      = 1
+max      = 12
+interval = 1
+str      = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH
+strhelp  = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_BASIC
+patxname = ""rainforest_line_height.game_creation.rainforest_line_height""
+
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.lake_size
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 3
+min      = 1
+max      = 255
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_LAKE_SIZE
+strhelp  = STR_CONFIG_SETTING_LAKE_SIZE_HELPTEXT
+strval   = STR_JUST_COMMA
+
+[SDT_BOOL]
+base     = GameSettings
+var      = game_creation.lakes_allowed_in_deserts
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = false
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_LAKES_ALLOWED_IN_DESERTS
+strhelp  = STR_CONFIG_SETTING_LAKES_ALLOWED_IN_DESERTS_HELPTEXT
 
 [SDT_VAR]
 base     = GameSettings
