--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -48,6 +48,7 @@ static bool RedrawTownAuthority(int32 p1);
 static bool InvalidateCompanyInfrastructureWindow(int32 p1);
 static bool InvalidateCompanyWindow(int32 p1);
 static bool ZoomMinMaxChanged(int32 p1);
+static bool InvalidateSettingsWindow(int32 p1);
 static bool MaxVehiclesChanged(int32 p1);
 static bool InvalidateShipPathCache(int32 p1);
 static bool ImprovedBreakdownsSettingChanged(int32 p1);
@@ -2398,6 +2399,86 @@ str      = STR_CONFIG_SETTING_TOWN_GROWTH
 strhelp  = STR_CONFIG_SETTING_TOWN_GROWTH_HELPTEXT
 strval   = STR_CONFIG_SETTING_TOWN_GROWTH_EXTREME_SLOW
 orderproc = OrderTownGrowthRate
+
+[SDT_BOOL]
+base     = GameSettings
+var      = economy.town_zone_calc_mode
+def      = false
+str      = STR_CONFIG_SETTING_TOWN_ZONE_CALC_MODE
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_CALC_MODE_HELPTEXT
+proc     = InvalidateSettingsWindow
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_calc_mode""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.town_zone_0_mult
+type     = SLE_UINT16
+def      = 15
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_ZONE_0_MULT
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_0_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_0_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.town_zone_1_mult
+type     = SLE_UINT16
+def      = 9
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_ZONE_1_MULT
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_1_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_1_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.town_zone_2_mult
+type     = SLE_UINT16
+def      = 0
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_ZONE_2_MULT
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_2_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_2_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.town_zone_3_mult
+type     = SLE_UINT16
+def      = 5
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_ZONE_3_MULT
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_3_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_3_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.town_zone_4_mult
+type     = SLE_UINT16
+def      = 3
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_ZONE_4_MULT
+strhelp  = STR_CONFIG_SETTING_TOWN_ZONE_4_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.town_zone_4_mult""
 
 [SDT_VAR]
 base     = GameSettings
