--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -36,6 +36,7 @@ static bool CheckFreeformEdges(int32 p1);
 static bool ChangeDynamicEngines(int32 p1);
 static bool StationCatchmentChanged(int32 p1);
 static bool InvalidateVehTimetableWindow(int32 p1);
+static bool ChangeTimetableInTicksMode(int32 p1);
 static bool UpdateTimeSettings(int32 p1);
 static bool ChangeTimeOverrideMode(int32 p1);
 static bool InvalidateCompanyLiveryWindow(int32 p1);
@@ -4439,7 +4440,7 @@ flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
 def      = false
 str      = STR_CONFIG_SETTING_TIMETABLE_IN_TICKS
 strhelp  = STR_CONFIG_SETTING_TIMETABLE_IN_TICKS_HELPTEXT
-proc     = InvalidateVehTimetableWindow
+proc     = ChangeTimetableInTicksMode
 cat      = SC_EXPERT
 
 ;; gui.time_in_minutes
