Allow tile height to also play a part in determining the density of rocky patches.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3763,6 +3763,19 @@ str      = STR_CONFIG_SETTING_ROCKS_AMOUNT
 strhelp  = STR_CONFIG_SETTING_ROCKS_AMOUNT_HELPTEXT
 strval   = STR_JUST_COMMA
 
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.height_affects_rocks
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 0
+min      = 0
+max      = 25
+interval = 1
+str      = STR_CONFIG_SETTING_HEIGHT_ROCKS
+strhelp  = STR_CONFIG_SETTING_HEIGHT_ROCKS_HELPTEXT
+strval   = STR_JUST_COMMA
+
 ;;game_creation.build_public_roads
 [SDT_NULL]
 length   = 1
