Add PR #231: More river configuration options

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -3803,21 +3803,78 @@ cat      = SC_BASIC
 base     = GameSettings
 var      = game_creation.min_river_length
 type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 from     = SLV_163
 def      = 16
 min      = 2
 max      = 255
 cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVER_MIN_LENGTH
+strhelp  = STR_CONFIG_SETTING_RIVER_MIN_LENGTH_HELPTEXT
+strval   = STR_JUST_COMMA
 
 [SDT_VAR]
 base     = GameSettings
 var      = game_creation.river_route_random
 type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 from     = SLV_163
 def      = 5
 min      = 1
 max      = 255
 cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM
+strhelp  = STR_CONFIG_SETTING_RIVER_ROUTE_RANDOM_HELPTEXT
+strval   = STR_JUST_COMMA
+
+[SDT_BOOL]
+base     = GameSettings
+var      = game_creation.rivers_top_of_hill
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = true
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL
+strhelp  = STR_CONFIG_SETTING_RIVERS_TOP_OF_HILL_HELPTEXT
+patxname = ""rivers.game_creation.rivers_top_of_hill""
+
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.river_tropics_width
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 5
+min      = 1
+max      = 12
+interval = 1
+str      = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH
+strhelp  = STR_CONFIG_SETTING_RIVER_TROPICS_WIDTH_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_BASIC
+patxname = ""rivers.game_creation.river_tropics_width""
+
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.lake_size
+type     = SLE_UINT8
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = 8
+min      = 1
+max      = 100
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_LAKE_SIZE
+strhelp  = STR_CONFIG_SETTING_LAKE_SIZE_HELPTEXT
+strval   = STR_JUST_COMMA
+patxname = ""rivers.game_creation.lake_size""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = game_creation.lakes_allowed_in_deserts
+guiflags = SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
+def      = false
+cat      = SC_EXPERT
+str      = STR_CONFIG_SETTING_LAKES_ALLOWED_IN_DESERTS
+strhelp  = STR_CONFIG_SETTING_LAKES_ALLOWED_IN_DESERTS_HELPTEXT
+patxname = ""rivers.game_creation.lakes_allowed_in_deserts""
 
 [SDT_VAR]
 base     = GameSettings
@@ -3827,7 +3884,7 @@ from     = SLV_163
 guiflags = SGF_MULTISTRING | SGF_NEWGAME_ONLY
 def      = 2
 min      = 0
-max      = 3
+max      = 5
 str      = STR_CONFIG_SETTING_RIVER_AMOUNT
 strhelp  = STR_CONFIG_SETTING_RIVER_AMOUNT_HELPTEXT
 strval   = STR_RIVERS_NONE
