--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2540,6 +2540,76 @@ patxname = ""town_zone.economy.town_zone_4_mult""
 
 [SDT_VAR]
 base     = GameSettings
+var      = economy.city_zone_0_mult
+type     = SLE_UINT16
+def      = 15
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_CITY_ZONE_0_MULT
+strhelp  = STR_CONFIG_SETTING_CITY_ZONE_0_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.city_zone_0_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.city_zone_1_mult
+type     = SLE_UINT16
+def      = 9
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_CITY_ZONE_1_MULT
+strhelp  = STR_CONFIG_SETTING_CITY_ZONE_1_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.city_zone_1_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.city_zone_2_mult
+type     = SLE_UINT16
+def      = 0
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_CITY_ZONE_2_MULT
+strhelp  = STR_CONFIG_SETTING_CITY_ZONE_2_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.city_zone_2_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.city_zone_3_mult
+type     = SLE_UINT16
+def      = 5
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_CITY_ZONE_3_MULT
+strhelp  = STR_CONFIG_SETTING_CITY_ZONE_3_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.city_zone_3_mult""
+
+[SDT_VAR]
+base     = GameSettings
+var      = economy.city_zone_4_mult
+type     = SLE_UINT16
+def      = 3
+min      = 0
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_CITY_ZONE_4_MULT
+strhelp  = STR_CONFIG_SETTING_CITY_ZONE_4_MULT_HELPTEXT
+strval   = STR_JUST_COMMA
+cat      = SC_EXPERT
+patxname = ""town_zone.economy.city_zone_4_mult""
+
+[SDT_VAR]
+base     = GameSettings
 var      = economy.town_growth_cargo_transported
 type     = SLE_UINT8
 def      = 0
