--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   pull_request:
-  push:
-    branches:
-    - master
+#  push:
+#    branches:
+#    - master
   workflow_dispatch:
     inputs:
       ref:
