--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -335,6 +335,20 @@ strval   = STR_SUBSIDY_X1_5
 
 [SDT_VAR]
 base     = GameSettings
+var      = difficulty.subsidy_duration
+type     = SLE_UINT16
+from     = SLV_CUSTOM_SUBSIDY_DURATION
+guiflags = SGF_0ISDISABLED
+def      = 1
+min      = 0
+max      = 5000
+interval = 1
+str      = STR_CONFIG_SETTING_SUBSIDY_DURATION
+strhelp  = STR_CONFIG_SETTING_SUBSIDY_DURATION_HELPTEXT
+strval   = STR_CONFIG_SETTING_SUBSIDY_DURATION_VALUE
+
+[SDT_VAR]
+base     = GameSettings
 var      = difficulty.construction_cost
 type     = SLE_UINT8
 from     = SLV_97
