Add PF setting for whether to pathfind up to back of one-way PBS

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1327,15 +1327,22 @@ strhelp  = STR_CONFIG_SETTING_FORBID_90_DEG_HELPTEXT
 proc     = InvalidateShipPathCache
 cat      = SC_EXPERT
 
-;; pf.back_of_one_way_pbs_waiting_point
-[SDT_NULL]
-length   = 1
+[SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
+xref     = ""pf.back_of_one_way_pbs_waiting_point""
 
-;; pf.back_of_one_way_pbs_waiting_point
-[SDT_NULL]
-length   = 1
+[SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP, SL_CHILLPP_232)
+xref     = ""pf.back_of_one_way_pbs_waiting_point""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = pf.back_of_one_way_pbs_waiting_point
+def      = true
+str      = STR_CONFIG_SETTING_BACK_ONE_WAY_PBS_SAFE_WAITING
+str      = STR_CONFIG_SETTING_BACK_ONE_WAY_PBS_SAFE_WAITING_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""pf.back_of_one_way_pbs_waiting_point""
 
 [SDT_VAR]
 base     = GameSettings
