Update status bar sizing when changing date/time display settings

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -4794,7 +4794,7 @@ max      = 3
 str      = STR_CONFIG_SETTING_DATE_WITH_TIME
 strval   = STR_CONFIG_SETTING_DATE_WITH_TIME_NONE
 strhelp  = STR_CONFIG_SETTING_DATE_WITH_TIME_HELPTEXT
-proc     = RedrawScreen
+proc     = UpdateTimeSettings
 
 [SDTC_BOOL]
 var      = gui.timetable_start_text_entry
