Add generation of public roads linking towns

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -4073,9 +4073,19 @@ strval   = STR_JUST_COMMA
 patxname = ""rocks.game_creation.height_affects_rocks""
 
 ;;game_creation.build_public_roads
-[SDT_NULL]
-length   = 1
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
+[SDT_VAR]
+base     = GameSettings
+var      = game_creation.build_public_roads
+type     = SLE_UINT8
+guiflags = SGF_MULTISTRING | SGF_NEWGAME_ONLY
+def      = 0
+min      = 0
+max      = 2
+str      = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS
+strhelp  = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_HELPTEXT
+strval   = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_NONE
+patxname = ""public_roads.game_creation.build_public_roads""
+extver   = SlXvFeatureTest(XSLFTO_OR, XSLFI_JOKERPP)
 
 ; locale
 
