Use localised units for payment graph X axis
Match quantities in graph title

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -61,6 +61,7 @@ static bool ViewportMapShowTunnelModeChanged(int32 p1);
 static bool ViewportMapLandscapeModeChanged(int32 p1);
 static bool UpdateLinkgraphColours(int32 p1);
 static bool ClimateThresholdModeChanged(int32 p1);
+static bool VelocityUnitsChanged(int32 p1);
 
 static bool UpdateClientName(int32 p1);
 static bool UpdateServerPassword(int32 p1);
@@ -4103,7 +4104,7 @@ guiflags = SGF_MULTISTRING
 def      = 1
 max      = 3
 full     = _locale_units
-proc     = RedrawScreen
+proc     = VelocityUnitsChanged
 cat      = SC_BASIC
 str      = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY
 strhelp  = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY_HELPTEXT
