Add buttons to cargo payment graph to select x-axis
Save in misc settings

--- a/src/table/misc_settings.ini
+++ b/src/table/misc_settings.ini
@@ -381,5 +381,13 @@ min      = 0
 max      = ZEM_END - 1
 cat      = SC_BASIC
 
+[SDTG_VAR]
+name     = ""cargo_payment_x_mode""
+type     = SLE_UINT8
+var      = _cargo_payment_x_mode
+def      = 0
+min      = 0
+max      = 1
+
 [SDTG_END]
 
