--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5467,6 +5467,19 @@ strhelp  = STR_CONFIG_SETTING_SHADED_TREES_ON_SLOPES_HELPTEXT
 proc     = RedrawScreen
 cat      = SC_BASIC
 
+[SDTC_VAR]
+var      = gui.demolish_confirm_mode
+type     = SLE_UINT8
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+guiflags = SGF_MULTISTRING
+def      = 2
+min      = 0
+max      = 2
+str      = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE
+strhelp  = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE_HELPTEXT
+strval   = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE_OFF
+cat      = SC_BASIC
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
