Fix loading of build public roads setting from JokerPP savegames

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -4072,7 +4072,10 @@ strhelp  = STR_CONFIG_SETTING_HEIGHT_ROCKS_HELPTEXT
 strval   = STR_JUST_COMMA
 patxname = ""rocks.game_creation.height_affects_rocks""
 
-;;game_creation.build_public_roads
+[SDT_XREF]
+extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
+xref     = ""game_creation.build_public_roads""
+
 [SDT_VAR]
 base     = GameSettings
 var      = game_creation.build_public_roads
@@ -4085,7 +4088,6 @@ str      = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS
 strhelp  = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_HELPTEXT
 strval   = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_NONE
 patxname = ""public_roads.game_creation.build_public_roads""
-extver   = SlXvFeatureTest(XSLFTO_OR, XSLFI_JOKERPP)
 
 ; locale
 
