Add a setting to turn off road vehicle slowdown in curves
Prior to this change, road vehicles would always slowdown in curves. This forces the player to build grid like roads. With new height levels and more mountainous maps and in the absense of diagonal roads this causes unnecessary pain. It should be an option to turn this off, so mountainous maps and curvy roads are not punishing the player unnecessarily. Nobody wants to build grid like roads outside of towns.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1647,9 +1647,17 @@ strhelp  = STR_CONFIG_SETTING_WAGONSPEEDLIMITS_HELPTEXT
 proc     = UpdateConsists
 
 ;; vehicle.slow_road_vehicles_in_curves
-[SDT_NULL]
-length   = 1
+[SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP, SL_JOKER_1_25)
+xref     = ""vehicle.slow_road_vehicles_in_curves""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.slow_road_vehicles_in_curves
+def      = true
+str      = STR_CONFIG_SETTING_SLOW_ROAD_VEHICLES_IN_CURVES
+strhelp  = STR_CONFIG_SETTING_SLOW_ROAD_VEHICLES_IN_CURVES_HELPTEXT
+cat      = SC_BASIC
 
 ;; vehicle.train_speed_adaption
 [SDT_NULL]
