Add a setting for train speed adaptation
Prior to this change, without realistic breaking, trains would continuously run into the train in front of them. This makes them adjust their speed based on trains in front of them

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1676,9 +1676,18 @@ cat      = SC_BASIC
 patxname = ""slow_road_vehicles_in_curves.vehicle.slow_road_vehicles_in_curves""
 
 ;; vehicle.train_speed_adaption
-[SDT_NULL]
-length   = 1
+[SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
+xref     = ""vehicle.train_speed_adaption""
+
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.train_speed_adaption
+def      = true
+str      = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION
+strhelp  = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""train_speed_adaption.vehicle.train_speed_adaption""
 
 [SDT_BOOL]
 base     = GameSettings
