Add patxname to setting

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1658,6 +1658,7 @@ def      = true
 str      = STR_CONFIG_SETTING_SLOW_ROAD_VEHICLES_IN_CURVES
 strhelp  = STR_CONFIG_SETTING_SLOW_ROAD_VEHICLES_IN_CURVES_HELPTEXT
 cat      = SC_BASIC
+patxname = ""slow_road_vehicles_in_curves.vehicle.slow_road_vehicles_in_curves""
 
 ;; vehicle.train_speed_adaption
 [SDT_NULL]
