Add option to sort tracks by category and speed (#282)

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -62,6 +62,7 @@ static bool ViewportMapLandscapeModeChanged(int32 p1);
 static bool UpdateLinkgraphColours(int32 p1);
 static bool ClimateThresholdModeChanged(int32 p1);
 static bool VelocityUnitsChanged(int32 p1);
+static bool ChangeTrackTypeSortMode(int32 p1);
 
 static bool UpdateClientName(int32 p1);
 static bool UpdateServerPassword(int32 p1);
@@ -5413,6 +5414,15 @@ flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
 def      = false
 str      = STR_CONFIG_SETTING_ADV_SIG_BRIDGE_TUN_MODES
 strhelp  = STR_CONFIG_SETTING_ADV_SIG_BRIDGE_TUN_MODES_HELPTEXT
+cat      = SC_EXPERT
+
+[SDTC_BOOL]
+var      = gui.sort_track_types_by_speed
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SORT_TRACK_TYPES_BY_SPEED
+strhelp  = STR_CONFIG_SETTING_SORT_TRACK_TYPES_BY_SPEED_HELPTEXT
+proc     = ChangeTrackTypeSortMode
 cat      = SC_EXPERT
 
 [SDTC_BOOL]
