--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5407,6 +5407,15 @@ strhelp  = STR_CONFIG_SETTING_ADV_SIG_BRIDGE_TUN_MODES_HELPTEXT
 cat      = SC_EXPERT
 
 [SDTC_BOOL]
+var      = gui.sort_track_types_by_speed
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SORT_TRACK_TYPES_BY_SPEED
+strhelp  = STR_CONFIG_SETTING_SORT_TRACK_TYPES_BY_SPEED_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""sort_track_types_by_speed.gui.sort_track_types_by_speed""
+
+[SDTC_BOOL]
 var      = gui.show_depot_sell_gui
 flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
 def      = false
