Add a build public roads button to the scenario editor

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -63,6 +63,7 @@ static bool UpdateLinkgraphColours(int32 p1);
 static bool ClimateThresholdModeChanged(int32 p1);
 static bool VelocityUnitsChanged(int32 p1);
 static bool ChangeTrackTypeSortMode(int32 p1);
+static bool PublicRoadsSettingChange(int32 p1);
 
 static bool UpdateClientName(int32 p1);
 static bool UpdateServerPassword(int32 p1);
@@ -4080,13 +4081,14 @@ xref     = ""game_creation.build_public_roads""
 base     = GameSettings
 var      = game_creation.build_public_roads
 type     = SLE_UINT8
-guiflags = SGF_MULTISTRING | SGF_NEWGAME_ONLY
+guiflags = SGF_MULTISTRING | SGF_NEWGAME_ONLY | SGF_SCENEDIT_TOO
 def      = 0
 min      = 0
 max      = 2
 str      = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS
 strhelp  = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_HELPTEXT
 strval   = STR_CONFIG_SETTING_BUILD_PUBLIC_ROADS_NONE
+proc     = PublicRoadsSettingChange
 patxname = ""public_roads.game_creation.build_public_roads""
 
 ; locale
