Clear state when setting changed

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -64,6 +64,7 @@ static bool ClimateThresholdModeChanged(int32 p1);
 static bool VelocityUnitsChanged(int32 p1);
 static bool ChangeTrackTypeSortMode(int32 p1);
 static bool PublicRoadsSettingChange(int32 p1);
+static bool TrainSpeedAdaptionChanged(int32 p1);
 
 static bool UpdateClientName(int32 p1);
 static bool UpdateServerPassword(int32 p1);
@@ -1687,6 +1688,7 @@ def      = true
 str      = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION
 strhelp  = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION_HELPTEXT
 cat      = SC_EXPERT
+proc     = TrainSpeedAdaptionChanged
 patxname = ""train_speed_adaption.vehicle.train_speed_adaption""
 
 [SDT_BOOL]
