--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -64,7 +64,7 @@ static bool ClimateThresholdModeChanged(int32 p1);
 static bool VelocityUnitsChanged(int32 p1);
 static bool ChangeTrackTypeSortMode(int32 p1);
 static bool PublicRoadsSettingChange(int32 p1);
-static bool TrainSpeedAdaptionChanged(int32 p1);
+static bool TrainSpeedAdaptationChanged(int32 p1);
 
 static bool UpdateClientName(int32 p1);
 static bool UpdateServerPassword(int32 p1);
@@ -1676,20 +1676,19 @@ strhelp  = STR_CONFIG_SETTING_SLOW_ROAD_VEHICLES_IN_CURVES_HELPTEXT
 cat      = SC_BASIC
 patxname = ""slow_road_vehicles_in_curves.vehicle.slow_road_vehicles_in_curves""
 
-;; vehicle.train_speed_adaption
 [SDT_XREF]
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
-xref     = ""vehicle.train_speed_adaption""
+xref     = ""vehicle.train_speed_adaptation""
 
 [SDT_BOOL]
 base     = GameSettings
-var      = vehicle.train_speed_adaption
+var      = vehicle.train_speed_adaptation
 def      = true
-str      = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION
-strhelp  = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTION_HELPTEXT
+str      = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTATION
+strhelp  = STR_CONFIG_SETTING_TRAIN_SPEED_ADAPTATION_HELPTEXT
 cat      = SC_EXPERT
-proc     = TrainSpeedAdaptionChanged
-patxname = ""train_speed_adaption.vehicle.train_speed_adaption""
+proc     = TrainSpeedAdaptationChanged
+patxname = ""train_speed_adaptation.vehicle.train_speed_adaptation""
 
 [SDT_BOOL]
 base     = GameSettings
