Add setting for whether to use dual pane train purchase window

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5539,6 +5539,13 @@ strhelp  = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE_HELPTEXT
 strval   = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE_OFF
 cat      = SC_BASIC
 
+[SDTC_BOOL]
+var      = gui.dual_pane_train_purchase_window
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = true
+str      = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW
+strhelp  = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_HELPTEXT
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
