Fix #9388: thread unsafe use of NetworkAdminConsole/IConsolePrint
(cherry picked from commit d7a0e80fc18b689455eaca09883fccbcc722d7e3)

# Conflicts:
#	src/debug.cpp
#	src/debug.h
#	src/table/settings/gui_settings.ini

See: https://github.com/OpenTTD/OpenTTD/pull/9456

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -40,6 +40,7 @@ static bool ChangeTimetableInTicksMode(int32 p1);
 static bool UpdateTimeSettings(int32 p1);
 static bool ChangeTimeOverrideMode(int32 p1);
 static bool InvalidateCompanyLiveryWindow(int32 p1);
+static bool DeveloperModeChanged(int32 p1);
 static bool InvalidateNewGRFChangeWindows(int32 p1);
 static bool InvalidateIndustryViewWindow(int32 p1);
 static bool InvalidateAISettingsWindow(int32 p1);
@@ -5585,6 +5586,7 @@ flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
 def      = 1
 min      = 0
 max      = 2
+proc     = DeveloperModeChanged
 cat      = SC_EXPERT
 
 [SDTC_BOOL]
