--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5551,12 +5551,11 @@ strval   = STR_CONFIG_SETTING_DEMOLISH_CONFIRM_MODE_OFF
 cat      = SC_BASIC
 
 [SDTC_BOOL]
-var      = gui.experimental_dual_pane_train_purchase_window
+var      = gui.dual_pane_train_purchase_window
 flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
-def      = false
+def      = true
 str      = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW
 strhelp  = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_HELPTEXT
-cat      = SC_EXPERT
 
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
