NewGRF: Allow using Action 2/3 for custom signal sprites
This is mostly the same format as the railtype custom signal mechanism

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -266,6 +266,8 @@ add_files(
     newgrf_industries.h
     newgrf_industrytiles.cpp
     newgrf_industrytiles.h
+    newgrf_newsignals.cpp
+    newgrf_newsignals.h
     newgrf_object.cpp
     newgrf_object.h
     newgrf_profiling.cpp
