Store tunnel/bridge signal spacing on tile, adjust spacing to fit length

--- a/src/table/company_settings.ini
+++ b/src/table/company_settings.ini
@@ -11,7 +11,6 @@ static bool UpdateIntervalTrains(int32 p1);
 static bool UpdateIntervalRoadVeh(int32 p1);
 static bool UpdateIntervalShips(int32 p1);
 static bool UpdateIntervalAircraft(int32 p1);
-static bool SimulatedWormholeSignalsChanged(int32 p1);
 
 static const SettingDesc _company_settings[] = {
 [post-amble]
@@ -269,8 +268,8 @@ def      = 4
 min      = 1
 max      = 16
 str      = STR_CONFIG_SETTING_SIMULATE_SIGNALS
+strhelp  = STR_CONFIG_SETTING_SIMULATE_SIGNALS_HELPTEXT
 strval   = STR_CONFIG_SETTING_SIMULATE_SIGNALS_VALUE
-proc     = SimulatedWormholeSignalsChanged
 cat      = SC_ADVANCED
 patxname = ""simulated_wormhole_signals""
 
