Add new signal type: no-entry signal
This is only passable in one direction, but does not have a signal
or show an aspect in the opposite direction

Add a setting for whether this is shown in the signal UI.
Off by default.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -5413,6 +5413,15 @@ proc     = ProgrammableSignalsShownChanged
 cat      = SC_ADVANCED
 
 [SDTC_BOOL]
+var      = gui.show_noentrysig_ui
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_NOENTRYSIG_FEATURES
+strhelp  = STR_CONFIG_SETTING_SHOW_NOENTRYSIG_FEATURES_HELPTEXT
+proc     = ProgrammableSignalsShownChanged
+cat      = SC_ADVANCED
+
+[SDTC_BOOL]
 var      = gui.show_veh_list_cargo_filter
 flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
 def      = true
