--- a/src/rev.cpp.in
+++ b/src/rev.cpp.in
@@ -80,6 +80,13 @@ const byte _openttd_revision_modified = ${REV_MODIFIED};
 const byte _openttd_revision_tagged = ${REV_ISTAG};
 
 /**
+ * To check compatibility of BaNaNaS content, this version string is used.
+ * It should never contain things like "beta", but only the release version
+ * we are compatible with.
+ */
+const char _openttd_content_version[] = "12.0";
+
+/**
  * The NewGRF revision of OTTD:
  * bits  meaning.
  * 28-31 major version
