--- a/src/rev.cpp.in
+++ b/src/rev.cpp.in
@@ -37,6 +37,8 @@ bool IsReleasedVersion()
  */
 const char _openttd_revision[] = "${REV_VERSION}";
 
+const char _openttd_release_version[] = "${REV_RELEASE}";
+
 /**
  * The text version of OpenTTD's build date.
  * Updating the build date in this file is the safest as it generally gets
