--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1239,13 +1239,13 @@ extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_JOKERPP)
 base     = GameSettings
 var      = economy.town_cargo_scale_factor
 type     = SLE_INT16
-guiflags = SGF_DECIMAL1
+guiflags = SGF_DECIMAL1 | SGF_DEC1SCALE
 def      = 0
 min      = -160
 max      = +80
 interval = 1
 str      = STR_CONFIG_SETTING_TOWN_CARGO_FACTOR
-strval   = STR_JUST_DECIMAL1
+strval   = STR_DECIMAL1_WITH_SCALE
 strhelp  = STR_CONFIG_SETTING_TOWN_CARGO_FACTOR_HELPTEXT
 patxname = ""town_cargo_adj.economy.town_cargo_scale_factor""
 
@@ -1253,13 +1253,13 @@ patxname = ""town_cargo_adj.economy.town_cargo_scale_factor""
 base     = GameSettings
 var      = economy.industry_cargo_scale_factor
 type     = SLE_INT16
-guiflags = SGF_DECIMAL1
+guiflags = SGF_DECIMAL1 | SGF_DEC1SCALE
 def      = 0
 min      = -50
 max      = +50
 interval = 1
 str      = STR_CONFIG_SETTING_INDUSTRY_CARGO_FACTOR
-strval   = STR_JUST_DECIMAL1
+strval   = STR_DECIMAL1_WITH_SCALE
 strhelp  = STR_CONFIG_SETTING_INDUSTRY_CARGO_FACTOR_HELPTEXT
 patxname = ""industry_cargo_adj.economy.industry_cargo_scale_factor""
 
